--- a/src/views/search/styles.scss
+++ b/src/views/search/styles.scss
@@ -19,9 +19,53 @@
     padding: 0.5em;
     margin-top: 1em;
     text-align: center;
+    font-size: 16px;
+    line-height: 18px;
 
     span.not-found {
       color: gray;
+    }
+
+    .owner-info {
+      .car-description {
+
+      }
+
+      .owner {
+        .anticon.user-icon {
+          font-size: 18px;
+          margin-right: 0.5em;
+        }
+
+        .owner-name {
+
+        }
+
+        .owner-flat {
+          font-weight: 500;
+          margin-left: 4px;
+        }
+      }
+
+      .phone-info {
+        margin-top: 1.5em;
+
+        .anticon.anticon-phone {
+          font-size: 20px;
+          margin-right: 0.5em;
+          color: blue;
+        }
+
+
+        .phone-number {
+          font-weight: 500;
+        }
+
+        .phone-label {
+          margin-left: 6px;
+          color: #656565;
+        }
+      }
     }
   }
 }
