Фикс вывода логов въездов

--- a/src/views/search/result-card/gate-logs/styles.scss
+++ b/src/views/search/result-card/gate-logs/styles.scss
@@ -14,15 +14,24 @@
       margin-bottom: 6px;
     }
 
-    .date {
-      &.empty {
-        color: gray;
+    .entry  {
+      .date {
+        &.empty {
+          color: gray;
+        }
+
+        &.outdated {
+          color: red;
+        }
       }
 
-      &.outdated {
-        color: red;
+      &.last-entry {
+        color: #008267;
       }
     }
+
+
+
 
     .ant-statistic {
       margin-left: 6px;
