Добавлен зачаток профиля пользователя

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@ body {
         .view {
           padding: 1em;
           height: 100%;
+          text-align: center;
           overflow-y: auto;
         }
       }
