Добавлена страница с доступами

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,14 @@ body {
           height: 100%;
           text-align: center;
           overflow-y: auto;
+
+           > div {
+             text-align: start;
+           }
+
+          > h5, > h4 {
+            margin-top: 8px;
+          }
         }
       }
 
