--- a/src/layout/footer/styles.scss
+++ b/src/layout/footer/styles.scss
@@ -6,45 +6,66 @@
   }
 }
 
-.ant-menu.navigation-menu {
-  border-bottom-width: 0;
-  background: transparent;
-  width: 100%;
-  justify-content: space-around;
+.ant-app .ant-layout .ant-layout-footer {
+  //padding: 0.5em 1em !important;
+  .ant-menu.navigation-menu {
+    border-bottom-width: 0;
+    background: transparent;
+    width: 100%;
+    justify-content: space-around;
 
-  .ant-menu-item {
-    .anticon.ant-menu-item-icon {
-      font-size: 20px;
+    .ant-menu-item {
+      text-align: center;
+      line-height: 18px;
+      .anticon.ant-menu-item-icon {
+        font-size: 18px;
+      }
+
+      &::after {
+        border-bottom: none;
+      }
+
+      .ant-menu-title-content {
+        display: block;
+        color: inherit;
+        margin: 0;
+        padding-top: 0.5em;
+        line-height: 12px;
+        font-size: 12px;
+      }
+
+      &:not(.ant-menu-item-selected) {
+        &:hover {
+          @include iconColor($antd-blue-hover);
+        }
+
+        &:active {
+          @include iconColor($antd-blue-active);
+        }
+
+      }
+
+      &.ant-menu-item-selected {
+        .anticon.ant-menu-item-icon {
+          @include iconColor($antd-blue);
+        }
+      }
+
+      &:hover {
+        &:not(.ant-menu-item-selected) {
+          .ant-menu-title-content {
+            //color: inherit;
+            color: $antd-blue-hover
+          }
+        }
+
+      }
     }
 
-    &::after {
-      border-bottom: none;
-    }
-
-    .ant-menu-title-content {
+    &::after,
+    &::before{
       display: none;
     }
-
-    &:not(.ant-menu-item-selected) {
-      &:hover {
-        @include iconColor($antd-blue-hover);
-      }
-
-      &:active {
-        @include iconColor($antd-blue-active);
-      }
-
-    }
-
-    &.ant-menu-item-selected {
-      .anticon.ant-menu-item-icon {
-        @include iconColor($antd-blue);
-      }
-    }
-  }
-
-  &::after,
-  &::before{
-    display: none;
   }
 }
+
