--- a/src/App.scss
+++ b/src/App.scss
@@ -7,18 +7,20 @@ body {
 
   .ant-app {
     height: 100%;
+    ;
 
     .ant-layout {
       height: 100%;
+      font-size: 16px;
 
       .ant-layout-content {
         background: rgb(252, 252, 252);
 
         .view {
           padding: 1em;
-          height: 100%;
+          height: calc(100vh - 65px);
           text-align: center;
-          overflow-y: auto;
+          //overflow-y: auto;
 
           > h5, > h4 {
             margin-top: 8px;
@@ -33,21 +35,21 @@ body {
   }
 }
 
-.app {
-  //font-size: 16px;
-  //text-align: center;
-
-  > .ant-layout {
-    height: 100vh;
-
-    > .ant-layout-content {
-
-      .view {
-        height: 100%;
-        padding: 1em;
-      }
-    }
-  }
-
-
-}
+//.app {
+//  //font-size: 16px;
+//  //text-align: center;
+//
+//  > .ant-layout {
+//    height: 100vh;
+//
+//    > .ant-layout-content {
+//
+//      .view {
+//        height: 100%;
+//        padding: 1em;
+//      }
+//    }
+//  }
+//
+//
+//}
