Добавлены иконки машинок и квартир в профиль

--- a/src/views/user/profile/styles.scss
+++ b/src/views/user/profile/styles.scss
@@ -22,11 +22,17 @@
     .user-property {
       text-align: start;
     }
+
+    .logout-btn {
+      margin-top: 1em;
+      font-size: 16px;
+    }
   }
 
 
-  .logout-container {
-    padding-bottom: 1em;
-  }
+    .copyright {
+      font-size: 14px;
+      color: gray;
+    }
 
 }
