--- a/src/views/user/profile/property-item/styles.scss
+++ b/src/views/user/profile/property-item/styles.scss
@@ -1,8 +1,33 @@
 .property-item {
-  padding: 1em;
+  padding: 1em 0.5em;
+  display: flex;
+  gap: 1em;
+  align-items: center;
   border-radius: 0.5em;
   background: rgba(235, 236, 240, 0.7);
   line-height: 20px;
+
+  .property-info {
+    flex: 1 0 auto;
+  }
+  .icon {
+    padding: 0.5em;
+
+    .icon-container {
+      width: 48px;
+      height: 48px;
+      border-radius: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(250, 250, 250, .95);
+
+      .anticon {
+        font-size: 32px;
+        color: rgba(80,80,80, 0.9);
+      }
+    }
+  }
 
   &:not(:last-child) {
     margin-bottom: 1em;
