--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,10 @@ body {
 
         .view {
           padding: 1em;
-          height: calc(100vh - 65px);
+          padding-bottom: 0;
+          height: 100%;
+          max-height: 100%;
+          min-height: 100%;
           text-align: center;
           //overflow-y: auto;
 
