--- a/src/views/user/accesses/access-item/components/granted-areas/styles.scss
+++ b/src/views/user/accesses/access-item/components/granted-areas/styles.scss
@@ -1,37 +1,32 @@
-$areasWidth: 52px;
+$areaWidth: 28px;
 
 .access-item-areas {
-  display: inline-flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: $areasWidth;
-  gap: 6px;
+  //display: inline-flex;
+  //align-items: flex-start;
+  //justify-content: flex-start;
+  width: $areaWidth + 2px;
+  text-align: end;
   line-height: 16px;
   min-height: 36px;
   padding-top: 2px;
 
-  .access-area {
-    .anticon {
-      font-size: 21px;
+  &.double-width {
+    width: 52px;
+  }
 
-      &.leaf-icon {
-        //color: #61a938;
-      }
+  .ant-avatar.ant-avatar-sm {
+    text-align: center;
+    width: 28px;
+    height: 28px;
+    font-size: 16px;
+  }
 
-      &.parking-filled-icon {
-        //color: rgb(85, 120, 188);
-      }
-    }
-
+  .parking-container {
     .places {
-      text-align: center;
-
-      .place {
-        font-size: 15px;
-        line-height: 18px;
-        color: rgba(90, 90, 90, 0.8);
+      .place-number {
+        color: rgb(100, 100, 100);
+        text-align: center;
       }
-
     }
   }
 
