--- a/src/utils/colors.scss
+++ b/src/utils/colors.scss
@@ -10,8 +10,11 @@ $orangeDark: #d47010;
 $antd-blue: #0371d7;
 $antd-blue-hover: #69b1ff;
 $antd-blue-active: #0958d9;
+$parkingColor: #5578BC;
+$homeColor: #61a938;
 
 $action-icon-table-color: #969696;
+
 
 @mixin rowActionButtonStyle($color:$action-icon-table-color) {
   .anticon {
