--- a/src/views/user/profile/styles.scss
+++ b/src/views/user/profile/styles.scss
@@ -37,7 +37,7 @@ $copyrightHeight: 40px;
 
     .logout-btn-container {
       padding: 1em 0;
-      .logout-btn {
+      .ant-btn {
         font-size: 16px;
       }
     }
