--- a/src/layout/footer/styles.scss
+++ b/src/layout/footer/styles.scss
@@ -7,7 +7,7 @@
 }
 
 .ant-app .ant-layout .ant-layout-footer {
-  padding: 0.5em 1em;
+  padding: 0.5em 1em 1em 1em;
   .ant-menu.navigation-menu {
     border-bottom-width: 0;
     background: transparent;
