--- a/src/views/user/profile/styles.scss
+++ b/src/views/user/profile/styles.scss
@@ -1,6 +1,7 @@
 $copyrightHeight: 40px;
 
 .view.my-profile {
+  padding-top: 0.5em !important;
 
   .profile-content {
     padding: 4px;
@@ -36,28 +37,34 @@ $copyrightHeight: 40px;
     }
 
     .logout-btn-container {
-      padding: 1em 0;
+      //padding: 1em 0;
+      text-align: end;
+      line-height: 22px;
+
       .ant-btn {
-        font-size: 16px;
+        font-size: 20px;
+        height: 22px;
+        width: 22px;
+        line-height: 22px;
       }
     }
 
   }
 
 
-    .copyright {
-      //background: #69b1ff;
-      font-size: 14px;
-      height: $copyrightHeight;
-      line-height: 14px;
-      padding: 8px 0;
-      color: gray;
+  .copyright {
+    //background: #69b1ff;
+    font-size: 14px;
+    height: $copyrightHeight;
+    line-height: 14px;
+    padding: 8px 0;
+    color: gray;
 
-      .ant-btn-link {
-        padding: 0;
-        line-height: 14px;
-        font-size: 14px;
-      }
+    .ant-btn-link {
+      padding: 0;
+      line-height: 14px;
+      font-size: 14px;
     }
+  }
 
 }
