Мелкие фиксы по цветам и иконкам

--- a/src/utils/colors.scss
+++ b/src/utils/colors.scss
@@ -12,6 +12,8 @@ $antd-blue-hover: #69b1ff;
 $antd-blue-active: #0958d9;
 $parkingColor: #5578BC;
 $homeColor: #61a938;
+$themeBlue: #3e8de3;
+$themeBlueDarker: #287ee6;
 
 $action-icon-table-color: #969696;
 
