--- a/src/layout/footer/styles.scss
+++ b/src/layout/footer/styles.scss
@@ -19,10 +19,10 @@
       line-height: 20px;
 
       .anticon.ant-menu-item-icon {
-        font-size: 18px;
+        font-size: 22px;
 
         &.gate-icon {
-          font-size: 20px;
+          font-size: 24px;
         }
       }
 
@@ -34,9 +34,9 @@
         display: block;
         color: inherit;
         margin: 0;
-        padding-top: 2px;
-        line-height: 12px;
-        font-size: 12px;
+        //padding-top: 2px;
+        line-height: 16px;
+        font-size: 16px;
       }
 
       &:not(.ant-menu-item-selected) {
