Добавлен поиск авто + разные иконки в зав-ти от роли

--- a/src/views/auth/profile/property-item/styles.scss
+++ b/src/views/auth/profile/property-item/styles.scss
@@ -1,4 +1,4 @@
-@import 'utils/colors';
+@import '../../../../utils/colors';
 
 @mixin iconColor($color :rgba(88, 90, 98, 0.7)) {
   .property-icon {
