--- a/src/views/guard/car-search/result-card/gate-logs/styles.scss
+++ b/src/views/guard/car-search/result-card/gate-logs/styles.scss
@@ -26,7 +26,8 @@
       }
 
       &.last-entry {
-        color: #008267;
+        //color: #008267;
+        color: rgb(186, 21, 108);
       }
     }
 
