--- a/src/App.scss
+++ b/src/App.scss
@@ -19,8 +19,7 @@ body {
         background: rgb(252, 252, 252);
 
         .view {
-          padding: 1em;
-          padding-bottom: 0;
+          padding: 0.5em 1em 0 1em;
           height: 100%;
           max-height: 100%;
           min-height: 100%;
